[gd_scene load_steps=10 format=3 uid="uid://cy40k81p41ncc"]

[ext_resource type="Script" path="res://scripts/composter.gd" id="1_5yxlq"]
[ext_resource type="PackedScene" uid="uid://l45lwmt0s3tn" path="res://scenes/interaction_label.tscn" id="2_jkgrj"]

[sub_resource type="Gradient" id="Gradient_x2crb"]
colors = PackedColorArray(0.407843, 0.321569, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1qqei"]
gradient = SubResource("Gradient_x2crb")
width = 16
height = 16

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cdlmy"]
gradient = SubResource("Gradient_x2crb")
width = 16
height = 8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ut8v"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukj8a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xw51s"]
size = Vector2(100, 1000)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1ch5"]
size = Vector2(1000, 100)

[node name="Composter" type="StaticBody2D"]
script = ExtResource("1_5yxlq")

[node name="BottomTop" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_1qqei")

[node name="TopPart" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -12)
texture = SubResource("GradientTexture2D_cdlmy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4ut8v")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ukj8a")

[node name="BlockArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockArea"]
shape = SubResource("RectangleShape2D_xw51s")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BlockArea"]
shape = SubResource("RectangleShape2D_e1ch5")

[node name="InteractionLabel" parent="." instance=ExtResource("2_jkgrj")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
